vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__abs_expression.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"abs 9\")"
---
UnaryExpression
  Keyword(Abs)
  LiteralExpression
    AbstractLiteral '9'
