vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__abstract_integer_literal.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"71\",)"
---
LiteralExpression
  AbstractLiteral '71'
