vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__abstract_real_literal.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"7.1\",)"
---
LiteralExpression
  AbstractLiteral '7.1'
