vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__add_expression.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"1 + 2\")"
---
BinaryExpression
  LiteralExpression
    AbstractLiteral '1'
  Plus
  LiteralExpression
    AbstractLiteral '2'
