vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__aggregate_choice_with_signature-2.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(name(name(name), name(name))[name, name]'i => actual)\")"
---
ParenthesizedExpressionOrAggregate
  LeftPar
  ElementAssociationList
    ElementAssociation
      ElementChoices
        Choices
          ExpressionChoice
            NameExpression
              Name
                NameDesignatorPrefix
                  Identifier 'name'
                ParenthesizedName
                  LeftPar
                  AssociationList
                    AssociationElement
                      ActualPart
                        ActualPartExpression
                          NameExpression
                            Name
                              NameDesignatorPrefix
                                Identifier 'name'
                              ParenthesizedName
                                LeftPar
                                AssociationList
                                  AssociationElement
                                    ActualPart
                                      ActualPartExpression
                                        NameExpression
                                          Name
                                            NameDesignatorPrefix
                                              Identifier 'name'
                                RightPar
                    Comma
                    AssociationElement
                      ActualPart
                        ActualPartExpression
                          NameExpression
                            Name
                              NameDesignatorPrefix
                                Identifier 'name'
                              ParenthesizedName
                                LeftPar
                                AssociationList
                                  AssociationElement
                                    ActualPart
                                      ActualPartExpression
                                        NameExpression
                                          Name
                                            NameDesignatorPrefix
                                              Identifier 'name'
                                RightPar
                  RightPar
                AttributeName
                  Signature
                    LeftSquare
                    TypeMarkList
                      Name
                        NameDesignatorPrefix
                          Identifier 'name'
                      Comma
                      Name
                        NameDesignatorPrefix
                          Identifier 'name'
                    RightSquare
                  Tick
                  Identifier 'i'
        RightArrow
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'actual'
  RightPar
