vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__aggregate_others.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(others => 1)\")"
---
ParenthesizedExpressionOrAggregate
  LeftPar
  ElementAssociation
    ElementChoices
      Choices
        OthersChoice
          Keyword(Others)
      RightArrow
    LiteralExpression
      AbstractLiteral '1'
  RightPar
