vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__aggregate_range.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(1 downto 0 => 2)\")"
---
ParenthesizedExpressionOrAggregate
  LeftPar
  ElementAssociationList
    ElementAssociation
      ElementChoices
        Choices
          ExpressionChoice
            BinaryExpression
              LiteralExpression
                AbstractLiteral '1'
              Keyword(Downto)
              LiteralExpression
                AbstractLiteral '0'
        RightArrow
      LiteralExpression
        AbstractLiteral '2'
  RightPar
