vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__allocator.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"new integer_vector'(0, 1)\")"
---
Allocator
  Keyword(New)
  QualifiedExpression
    Name
      NameDesignatorPrefix
        Identifier 'integer_vector'
    Tick
    ParenthesizedExpressionOrAggregate
      LeftPar
      ElementAssociationList
        ElementAssociation
          LiteralExpression
            AbstractLiteral '0'
        Comma
        ElementAssociation
          LiteralExpression
            AbstractLiteral '1'
      RightPar
