vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__allocator_subtype.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"new integer_vector\")"
---
Allocator
  Keyword(New)
  NameExpression
    Name
      Identifier 'integer_vector'
